# cloudrun-medios

./: .coverage  .dockerignore  .gitignore  72_HOUR_PRODUCTION_PLAN_RULES.md  ACTION_PLAN.md  ACTUAL_STATUS_VERIFICATION.md  AI_CODING_DIRECTIVES.md  CI_CD_SETUP.md  COMPLETE_SESSION_REPORT.md  COMPREHENSIVE_SESSION_SUMMARY.md  CURSOR_RULES_72HOUR_PLAN.md  DOCKER_SETUP.md  GCP_DEPLOYMENT_SETUP.md  PRODUCTION_PLAN_STATUS.md  PROGRESS_SUMMARY.md  PROJECT_ANALYSIS.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  REMAINING_TESTS.md  SECURITY.md  SECURITY_FIX.md  SETUP_GITHUB_SECRETS.md  TEST_FIXES_SUMMARY.md  TEST_STATUS_BEFORE_PUSH.md  WORKFLOW_STRATEGY.md  docker-compose.yml  tsconfig.json
Kiroween/: .gitignore  .pre-commit-config.yaml  DEVELOPMENT_CONSTITUTION.md  README.md  docker-compose.yml  pyproject.toml  run_integration_tests.py  test_database_integration.py  test_dol_basic.py  test_dol_service.py  test_dol_service_implementation.py  test_dol_task_4_2.py  test_federated_learning_implementation.py  test_federated_services.py  test_federation_package.py  test_services.py  test_task_completion.py  validate_task_3_3_completion.py  validate_task_4_2_completion.py
Kiroween/scripts/: check_no_phi.py  run_tests.py  validate_medical_safety.py  validate_privacy.py  verify_database.py
Kiroween/services/dol-service/: .gitkeep  __init__.py  config.py  dependencies.py  main.py  schemas.py
Kiroween/services/dol-service/middleware/: __init__.py  audit.py  auth.py
Kiroween/services/dol-service/routers/: __init__.py  federated.py  federated_patient.py  model_update.py  peer_registry.py  timeline.py
Kiroween/services/dol-service/services/: __init__.py  audit_storage.py  crypto_service.py  peer_registry.py  privacy_filter.py
Kiroween/services/manage-agent/: .gitkeep  __init__.py  config.py  main.py  schemas.py
Kiroween/services/manage-agent/routers/: __init__.py  health.py  profiles.py  timeline.py
Kiroween/services/manage-agent/services/: __init__.py  federated_service.py  profile_service.py
Kiroween/services/scribe-agent/: .gitkeep  __init__.py  config.py  main.py  schemas.py
Kiroween/services/scribe-agent/routers/: __init__.py  documentation.py  health.py
Kiroween/services/scribe-agent/services/: __init__.py  documentation_service.py  federated_service.py
Kiroween/services/summarizer-agent/: .gitkeep  __init__.py  config.py  main.py
Kiroween/services/summarizer-agent/services/: federated_service.py
Kiroween/shared/: __init__.py
Kiroween/shared/database/: .gitkeep  __init__.py  alembic.ini  base.py  connection.py  init.sql  models.py
Kiroween/shared/database/migrations/: env.py
Kiroween/shared/database/repositories/: __init__.py  base_repository.py  clinical_event_repository.py  local_record_repository.py  profile_repository.py
Kiroween/shared/federation/: .gitkeep  README.md  __init__.py  aggregation.py  base.py  models.py  transport.py
Kiroween/tests/: __init__.py  test_database_connection.py  test_database_models.py  test_federated_learning.py  test_multi_hospital_integration.py  test_repositories.py
Version -2/: DEPLOYMENT_GUIDE.md  mypy.ini  (+38 more)
Version-2-HospitalB/: .gitignore  .tool-versions  CI_CD_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEDERATED_BUILD_GUIDE.md  FINAL_STATUS.md  QUICK_START.md  READY_TO_START.md  START_ALL.ps1  START_SERVICES.ps1  TESTING_GUIDE.md  TEST_RESULTS.md  docker-compose.demo.yml  fix_ambiguous_chars.py  fix_final_errors.py  fix_ruff_errors.py  mypy.ini  pyproject.toml  pytest.ini  test_db_connection.py  test_document_system.py  test_full_system.py  verify_setup.py
Version-2-HospitalB/.config/: README.md
Version-2-HospitalB/.github/workflows/: ci.yml
Version-2-HospitalB/apps/frontend/: Dockerfile  README.md  env.example  nginx.conf
Version-2-HospitalB/apps/frontend/src/: App.tsx
Version-2-HospitalB/database/: README.md  models.py  seeds.py  session.py
Version-2-HospitalB/database/migrations/versions/: 20231115_000001_initial_schema.py  20250117_000002_add_file_assets_and_timeline_events.py
Version-2-HospitalB/database/tests/: test_crud.py
Version-2-HospitalB/docs/: README.md  db_bootstrap.md  demo_runbook.md  environment.md
Version-2-HospitalB/dol_service/: Dockerfile  README.md  config.py
Version-2-HospitalB/dol_service/handlers/: federated.py  health.py
Version-2-HospitalB/dol_service/schemas/: portable_profile.py
Version-2-HospitalB/dol_service/security/: auth.py
Version-2-HospitalB/dol_service/services/: profile_service.py
Version-2-HospitalB/dol_service/tests/: conftest.py
Version-2-HospitalB/federation/: config.py  dependencies.py  requirements.txt
Version-2-HospitalB/federation/aggregator/: __init__.py
Version-2-HospitalB/federation/aggregator/handlers/: model.py
Version-2-HospitalB/federation/tests/: conftest.py  test_aggregator.py
Version-2-HospitalB/scripts/: analyze_columns.py  check_esi_missing.py  check_rfv_missing.py  combine_nhamcs_data.py  compare_experiments.py  eda_nhamcs_data.py  explore_nhamcs_data.py  preprocess_nhamcs_data.py  reset_demo_data.sh  train_nurse_triage_model.py  train_receptionist_triage_model.py  train_receptionist_triage_model_v2.py  train_receptionist_triage_model_v3.py
Version-2-HospitalB/services/manage_agent/: Dockerfile  README.md  config.py  dependencies.py  entrypoint.sh  env.example  main.py  requirements.txt
Version-2-HospitalB/services/scribe_agent/: Dockerfile  README.md  config.py  entrypoint.sh  env.example  main.py
Version-2-HospitalB/services/summarizer_agent/: Dockerfile  README.md  __init__.py  config.py  entrypoint.sh  env.example  main.py
Version-2-HospitalB/shared/: exceptions.py  fastapi.py  logging.py
Version-2-HospitalB/tests/: __init__.py
medi-os/services/manage-agent/: PROJECT_SUMMARY.md  main.py  pyproject.toml  regenerate_csv_numeric_rfv.py  requirements.txt  save_preprocessed_cache.py  save_preprocessed_cache_v10_clinical_features.py  save_preprocessed_cache_v8_rfv_clustered.py  save_preprocessed_cache_v9_nlp_5class.py  test_preprocessing.py  test_rfv_mapper.py  verification_summary.md  verify_before_training.py
(+689 files in other folders)
