[tool.poetry]
name = "medi-os-version-2"
version = "0.1.0"
description = "Medi OS Kiroween Edition v2.0 monorepo tooling and shared libraries."
authors = ["Medi OS Team <engineering@medios.health>"]
license = "Apache-2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
fastapi = "^0.104.1"
python-multipart = "^0.0.6"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
scikit-learn = "^1.7.2"
joblib = "^1.5.2"
statsmodels = "^0.14.5"
imbalanced-learn = "^0.14.0"
xgboost = "^3.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.9"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1"
pre-commit = "^3.5.0"
types-requests = "^2.31.0.10"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
scipy = "^1.11.4"
openpyxl = "^3.1.2"
scikit-learn = "^1.3.0"
joblib = "^1.3.2"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["B008"]

[tool.ruff.per-file-ignores]
"scripts/**/*.py" = ["N803", "N806"]  # ML naming conventions (X_train, etc.)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
# Skip formatting for transcripts.py due to black/ruff format conflict
exclude = ["services/scribe_agent/handlers/transcripts.py"]

[tool.ruff.isort]
known-first-party = ["shared"]
combine-as-imports = true

[tool.black]
line-length = 88
target-version = ["py311"]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

